User Instruction Formatting Updated (#48)