@@ -28,11 +28,10 @@
 
 ### **Run From Source**
    1. Clone the Repository:
-   ```bash
    git clone https://github.com/your-repository/GameLoom.git
-   ```
+
    2. Install JavaFX:
-      - Download JavaFX 22.0.2 SDK from [JavaFX Downloads](https://jdk.java.net/javafx22/).
+      - Download JavaFX 22.0.2 SDK from: https://jdk.java.net/javafx22/.
       - Set up the JavaFX module path in your IDE.
 
    3. Run the Program:
@@ -42,31 +41,19 @@
 or
 
 ### **Run from .jar File**:
-* If you prefer a video tutorial, our team has made some available at:
-   [Windows Tutorial](https://youtu.be/a2tN3ApXKEo)
-   [Linux Tutorial](https://youtu.be/aA_0lpqbn7g)
-
    1. Download the Zip file that contains the .jar and dependencies directly above in the repository's file listings.
    2. Extract the .zip wherever you would like, navigate a terminal window to that directory location.
    3. System Universal Command:
-      ```bash
+
         Windows Command:
             java --module-path <insert_path_to_extracted_folder>\GameLoom\lib\windows\javafx-sdk-22.0.2\lib\ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            --
-            (e.x) java --module-path C:\Users\Chris\Downloads\GameLoom\lib\windows\javafx-sdk-22.0.2\lib\ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            
-            
+
         Linux Command:
             java --module-path <insert_path_to_extracted_folder>/GameLoom/lib/linux/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            --
-            (e.x) java --module-path /home/chris/Downloads/GameLoom/lib/linux/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            
-            
+
         Mac Command:
             java --module-path <insert_path_to_extracted_folder>/GameLoom/lib/mac/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-            --
-            (e.x) java --module-path /home/chris/Downloads/GameLoom/lib/linux/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
-         ```
+
 ## Usage:
 ### Importing Game Libraries:
   - **Steam**: Use Lorenzo Stanco's Steam Library Exporter.
@@ -90,37 +77,37 @@ GameLoom supports exporting your unified game library to a CSV file for external
 - PSDLE (PlayStation): EPSDLE export functionality for PS3, PSP, and PS Vita is not currently working as of October 2024.
 
 ## Contributing:
-We welcome contributions to GameLoom! If you encounter bugs, have feature requests, or want to contribute code, please submit an issue or pull request to the repository.
+We welcome contributions to GameLoom! If you encounter bugs, have feature requests, or want to contribute code, please submit an issue, fork a copy of the repository make whatever changes you would like and submit a pull request for review.
 
 ## Exporters:
 Below are the recommended tools for exporting game libraries from various platforms:
 
-- **Steam**: [Lorenzo Stanco's Steam Library Exporter](https://www.lorenzostanco.com/lab/steam/)
-- **PlayStation**: [PSDLE](https://repod.github.io/psdle/)
+- **Steam**: https://www.lorenzostanco.com/lab/steam/
+- **PlayStation**: https://repod.github.io/psdle/
    - The last row (database headers) is ignored during import by default.
    
-- **Nintendo**: [eshop-purchase-history](https://github.com/redphx/eshop-purchase-history)
+- **Nintendo**: https://github.com/redphx/eshop-purchase-history
    - Automatically ignores the last 5 rows during import that include summary data.
    - Requires Tampermonkey browser extension. See below.
-   - [Additional Information](https://www.reddit.com/r/nintendo/comments/8w1s65/i_made_a_script_to_export_your_purchase_history/)
+   - Additional Information: https://www.reddit.com/r/nintendo/comments/8w1s65/i_made_a_script_to_export_your_purchase_history/
      
-- **itch.io**: [Itch.io Library to CSV Scraper](https://gist.github.com/abraxas86/ad72ba46b6cdd86dc63058bba0c629c2#file-itchiocollectiontocsv-user-js)
+- **itch.io**: https://gist.github.com/abraxas86/ad72ba46b6cdd86dc63058bba0c629c2#file-itchiocollectiontocsv-user-js
    - Requires Tampermonkey browser extension. See below.
-   - [Additional Information](https://itch.io/blog/572343/big-improvements-to-library-to-csv-scraper)
+   - [Additional Information: https://itch.io/blog/572343/big-improvements-to-library-to-csv-scraper
 
 ### Tampermonkey Extension Links
-- [Firefox Tampermonkey Extension](https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/)
-- [Chrome Tampermonkey Extension](https://chromewebstore.google.com/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo)
+- Firefox Tampermonkey Extension: https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/
+- Chrome Tampermonkey Extension: https://chromewebstore.google.com/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo
 
 ## Tutorial Videos:
 To make the setup and usage process easier, we’ve created tutorial videos for the recommended exporters:
-- [Using Steam Exporter](https://youtu.be/OeS60dwbXBQ)
-- [Using PSDLE for PlayStation](https://youtu.be/vphXnajoUPY)
-- [Using itch.io Exporter](https://youtu.be/0QkQZILQ5zk)
-- [Using Nintendo Switch Exporter](https://youtu.be/hGhZ3xFpy00)
+- Using Steam Exporter: https://youtu.be/OeS60dwbXBQ
+- Using PSDLE for PlayStation: https://youtu.be/vphXnajoUPY
+- Using itch.io Exporter: https://youtu.be/0QkQZILQ5zk
+- Using Nintendo Switch Exporter: https://youtu.be/hGhZ3xFpy00
 
 ### License:
 GameLoom is licensed under MIT License. See the LICENSE file for more details.
 
 ### Contact:
-For support or inquiries, please contact us via our support email [GameLoomHelp@gmail.com].
+For support or inquiries, please contact us via our support email GameLoomHelp@gmail.com
